# depends

./: CMakeLists.txt
.github/workflows/: build.yml  toolchain.cmake
framework/kernel/: CMakeLists.txt
framework/kernel/src/: version.cpp  version.hpp
